# full-stack-ai-project1

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  readme.md
backend/: Dockerfile
backend/app/: main.py  pyproject.toml
backend/app2/: pyproject.toml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/.husky/: pre-commit
frontend/app/: globals.css  layout.tsx  page.tsx
frontend1/: next.config.ts
frontend1/app/: page.tsx
