[project]
name = "app"
version = "0.1.0"
description = "The Backend of DeepSeek Chat App"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "markdownify>=0.14.1",
    "ollama>=0.4.5",
    "pydantic>=2.10.4",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
