[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets[audio]>=3.2.0",
    "duckduckgo-search>=7.2.1",
    "fastapi>=0.115.6",
    "ffmpeg>=1.4",
    "loguru>=0.7.3",
    "markdownify>=0.14.1",
    "numba>=0.60.0",
    "ollama>=0.4.5",
    "pydantic>=2.10.4",
    "smolagents[litellm]>=1.4.1",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "transformers>=4.48.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
